feat: adicionado animações e resolvido alguns bugs

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <img src="./assets/logo.svg" alt="logo da uol">
         <input data-identifier="enter-name" data-input="username" class="login-view__input" type="text" placeholder="Digite seu nome">
         <input data-identifier="start" data-button="login" type="button" class="login-view__button" value="Entrar">
+        <img class="login__loading hidden" src="./assets/loading.gif" alt="loading gif">
     </div>
     <div data-view="sidebar" class="sidebar-view hidden">
-        <aside>
+        <aside class="">
             <div>
                 <p>Escolha um contato para enviar mensagem:</p>
                 <ul data-users>
