--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div data-view="login" class="login-view">
         <img src="./assets/logo.svg" alt="logo da uol">
-        <input data-identifier="enter-name" data-input="username" class="login-view__input" type="text" placeholder="Digite seu nome">
-        <input data-identifier="start" data-button="login" type="button" class="login-view__button" value="Entrar">
+        <input data-test="input-name" data-identifier="enter-name" data-input="username" class="login-view__input" type="text" placeholder="Digite seu nome">
+        <input data-test="send-name" data-identifier="start" data-button="login" type="button" class="login-view__button" value="Entrar">
         <img class="login__loading hidden" src="./assets/loading.gif" alt="loading gif">
     </div>
     <div data-view="sidebar" class="sidebar-view hidden">
@@ -36,21 +36,21 @@
             <div>
                 <p>Escolha a visibilidade:</p>
                 <ul>
-                    <li data-mode="message" data-identifier="visibility">
+                    <li data-test="public" data-mode="message" data-identifier="visibility">
                         <button>
                             <ion-icon name="lock-open"></ion-icon>
                             <div>
                                 <span>Público</span>
-                                <img class="hidden" src="./assets/check.svg" alt="check">
+                                <img data-test="check" class="hidden" src="./assets/check.svg" alt="check">
                             </div>
                         </button>
                     </li>
-                    <li data-mode="private_message" data-identifier="visibility">
+                    <li data-test="private" data-mode="private_message" data-identifier="visibility">
                         <button>
                             <ion-icon name="lock-closed"></ion-icon>
                             <div>
                                 <span>Reservadamente</span>
-                                <img class="hidden" src="./assets/check.svg" alt="check">
+                                <img data-test="check" class="hidden" src="./assets/check.svg" alt="check">
                             </div>
                         </button>
                     </li>
@@ -62,17 +62,17 @@
         <a href="#">
             <img src="./assets/logo.svg" alt="logo da uol">
         </a>
-        <button data-button="options">
+        <button data-test="open-participants" data-button="options">
             <ion-icon name="people"></ion-icon>
         </button>
     </header>
     <main data-view="chat"></main>
     <footer>
         <div>
-            <input data-input="message" type="text" placeholder="Escreva aqui...">
-            <p data-info></p>
+            <input data-test="input-message" data-input="message" type="text" placeholder="Escreva aqui...">
+            <p data-test="recipient" data-info></p>
         </div>
-        <button data-button="send">
+        <button data-test="send-message" data-button="send">
             <ion-icon name="paper-plane-outline"></ion-icon>
         </button>
     </footer>
